--- a/v3.4/VS2015/pcastli.ini
+++ b/v3.4/VS2015/pcastli.ini
@@ -1,3 +1,7 @@
 [garbage collector]
 ; number of executed top statements before launching garbage collection
 nb_executions = 5
+
+[context access]
+; "yes" is context access only for local function and global context, "no" is access to all upward contexts
+strict = yes
