--- a/v3.4/pcastli.ini
+++ b/v3.4/pcastli.ini
@@ -4,4 +4,4 @@ nb_executions = 5
 
 [context access]
 ; "yes" is context access only for local function and global context, "no" is access to all upward contexts
-strict = yes
+strict = no
